home/homeassistant/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: home-assistant
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.30.100
  name: home-assistant
spec:
  ports:
    - port: 8123
      targetPort: 8123
  selector:
    app.kubernetes.io/name: home-assistant
  type: LoadBalancer
  externalTrafficPolicy: Local
  loadBalancerClass: homelab-metallb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
    spec:
      hostNetwork: true
      containers:
        - name: home-assistant
          image: homeassistant/home-assistant:2025.2.5
          resources:
            requests:
              cpu: 400m
              memory: 768Mi
              ephemeral-storage: 1Gi
            limits:
              cpu: 2000m
              memory: 3Gi
              ephemeral-storage: 1Gi
          ports:
            - containerPort: 8123
          securityContext:
            privileged: true
          volumeMounts:
            - name: home-assistant-config
              mountPath: /config
            - mountPath: /dev/ttyUSB0
              name: must-invertor-usb
            - mountPath: /cert
              name: tls-cert
      volumes:
        - name: home-assistant-config
          persistentVolumeClaim:
            claimName: home-assistant-config
        - name: must-invertor-usb
          hostPath:
            path: /dev/ttyUSB0
        - name: tls-cert
          secret:
            secretName: ha.<homelab-domain>-cert
